Fix oversight where the friend carousel extension's scrollbar became unusable

--- a/distributable/friendCarousel/custom/scroll.css
+++ b/distributable/friendCarousel/custom/scroll.css
@@ -665,11 +665,10 @@
     padding-left: 12px;
     padding-right: 12px;
     transform: rotateX(180deg);
-    z-index: 2;
+    z-index: 5;
     position: relative;
     scrollbar-width: thin;
     scrollbar-color: #8787873b #f1f1f100;
-    pointer-events: none;
 }
 
 .content .friends-carousel-list-container {
@@ -680,7 +679,6 @@
     justify-content: space-between;
     transform: rotateX(180deg);
     padding-top: 15px;
-    height: 500px;
 }
 
 .content .friends-carousel-list-container-not-full {
@@ -689,11 +687,21 @@
     overflow: hidden;
     flex-direction: row;
     justify-content: flex-start;
-    /* height: 139.234px; Computed value of original */
 }
 
 .content .react-friends-carousel-container {
     height: 187px
+}
+
+/* https://stackoverflow.com/questions/4502633/how-to-affect-other-elements-when-one-element-is-hovered/74816531#74816531 */
+body:has(.friends-carousel-tile:hover) .friends-carousel-list-container {
+    height: 500px;
+}
+
+/* For an unknown reason, the avatar images move down very slightly when the friend tiles are stretched. */
+/* This is to undo that horrible, random offset that happens for who knows what reason. */
+body:has(.friends-carousel-tile:hover) .avatar.avatar-card-fullbody {
+    transform: translate(0px, -0.4px)
 }
 
 @media(max-width: 991px) {
